packages/terra-dev-site/src/pages/page/layouts/Card.module.scss
@import 'terra-application/lib/breakpoints/media-queries';

@import './clinical-lowlight-theme/Card.module';
@import './orion-fusion-theme/Card.module';

:local {
  .card {
    background-color: var(--terra-dev-site-card-background-color, #fefffe);
    border-bottom: 1px solid #c6c8c7;
    border-left: 1px solid #dfe0df;
    border-radius: 5px;
    border-right: 1px solid #dfe0df;
    border-top: 1px solid #eeefee;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    height: calc(100% - 30px);
    min-height: calc(100% - 30px);
    overflow: hidden;
    padding: 0 10px 10px;

    @include terra-mq-medium-up {
      min-width: 682px;
    }
  }

  .card-body {
    flex: 1 1 auto;
    padding-top: 1rem;
  }
}

